Add VCS-* in debian/control, forgot from previous version

--- a/debian/changelog
+++ b/debian/changelog
@@ -14,12 +14,12 @@ libapache2-mod-geoip (1.2.8-1) experimental; urgency=low
     - Use dh $@ --with apache2 in d/rules
     - Remove package prefix libapache2-mod-geoip.{docs,dirs,examples}, 
       it is useless when build a single binary package
-  * Add get-orig-source in debian/rules and README.source
+  * Add get-orig-source in debian/rules and README.source thanks to Arno Töll
   * Update debian/watch and explain why doesn't work
   * Add Vcs-* fields in debian/control
   * Bump to Standards-Version 3.9.4, no changes needed
 
- -- Prach Pongpanich <prachpub@gmail.com>  Mon, 11 Mar 2013 10:42:30 +0700
+ -- Prach Pongpanich <prachpub@gmail.com>  Mon, 13 Mar 2013 10:42:30 +0700
 
 libapache2-mod-geoip (1.2.7-1) unstable; urgency=low
 
